--- a/app/views/antigen/v2/global-registration/check-your-answers-person-1.html
+++ b/app/views/antigen/v2/global-registration/check-your-answers-person-1.html
@@ -378,6 +378,7 @@
         </div>
         {% endif %}
         </dl>
+        {% if data['fingerprick-test-person-1'] %}
         <h2 class="govuk-heading-l govuk-!-margin-bottom-3">Antibody test details</h2>
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
@@ -395,6 +396,7 @@
             </dd>
           </div>
         </dl>
+        {% endif %}
 
       <form action="/antigen/{{version}}/global-registration/people-confirmed-person-1" method="post" novalidate>
 
