--- a/app/views/antigen/v2/global-registration/check-your-answers.html
+++ b/app/views/antigen/v2/global-registration/check-your-answers.html
@@ -15,7 +15,10 @@
   </p>
 </div>
 
-<a class="govuk-back-link" href="/antigen/{{version}}/global-registration/fingerprick-test">Back</a>
+{{ govukBackLink({
+  text: "Back",
+  href: "javascript:window.history.go(-1);"
+}) }}
 
 {% endblock %}
 
@@ -401,6 +404,7 @@
         </div>
         {% endif %}
         </dl>
+        {% if data['fingerprick-test'] %}
         <h2 class="govuk-heading-l govuk-!-margin-bottom-3">Antibody test details</h2>
         <dl class="govuk-summary-list govuk-!-margin-bottom-9">
           <div class="govuk-summary-list__row">
@@ -438,6 +442,7 @@
             </dd>
           </div> -->
         </dl>
+        {% endif %}
 
       <form action="/antigen/{{version}}/global-registration/people-confirmed" method="post" novalidate>
 
