--- a/app/views/antigen/v2/global-registration/fingerprick-test-person-1.html
+++ b/app/views/antigen/v2/global-registration/fingerprick-test-person-1.html
@@ -5,7 +5,12 @@
 
 {% block beforeContent %}
 
-  <a class="govuk-back-link" href="/antigen/{{version}}/global-registration/check-your-answers-person-1">Back</a>
+{% if data['nhs-number-known-person-1'] == "Yes" %}
+<a class="govuk-back-link" href="/antigen/{{version}}/global-registration/nhs-number-person-1">Back</a>
+{% else %}
+<a class="govuk-back-link" href="/antigen/{{version}}/global-registration/nhs-number-known-person-1">Back</a>
+{% endif %}
+
 {% endblock %}
 
 {% block content %}
