--- a/app/views/antigen/v2/global-registration/nhs-number.html
+++ b/app/views/antigen/v2/global-registration/nhs-number.html
@@ -24,7 +24,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form action="/antigen/{{version}}/global-registration/fingerprick-test" method="post">
+      <form action="/antigen/{{version}}/action3/nhs-number" method="post">
 
         <fieldset class="govuk-fieldset" aria-describedby="nhs-number-hint">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
