--- a/app/views/antigen/v2/global-registration/people-confirmed-person-1.html
+++ b/app/views/antigen/v2/global-registration/people-confirmed-person-1.html
@@ -138,7 +138,7 @@
 
       </form>
 
-      <form class="form" action="/antigen/{{version}}/order-home-test-kit/" method="post" style="display: inline-block;">
+      <form class="form" action="/antigen/{{version}}/action3/people-confirmed" method="post" style="display: inline-block;">
 
         <button class="govuk-button" data-module="govuk-button">Save and continue</button>
 
