--- a/app/views/antigen/v2/home-testing/enter-barcode-manual-option-2.html
+++ b/app/views/antigen/v2/home-testing/enter-barcode-manual-option-2.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Enter your test kit barcode" %}
+{% set pageTitle = "Enter your test kit barcode reference" %}
 
 {% extends "includes/layout.html" %}
 
@@ -69,7 +69,7 @@
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
         <p class="govuk-body">
-          <a href="/antigen/{{version}}/home-testing/scan-barcode" role="button" draggable="false" class="govuk-link" data-module="govuk-button">
+          <a href="/antigen/{{version}}/home-testing/scan-barcode-option-2" role="button" draggable="false" class="govuk-link" data-module="govuk-button">
             Use the barcode scanner instead
           </a>
         </p>
@@ -80,11 +80,10 @@
   </div>
 
   <div class="proto-action big">
-    <a href="/antigen/{{version}}/home-testing/enter-barcode-manual-option-2">
-      <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 2</div>
+    <a href="/antigen/{{version}}/home-testing/enter-barcode-manual">
+      <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 1</div>
     </a>
   </div>
-
   <script>
 
     setTimeout(function () {
