--- a/app/views/antigen/v2/home-testing/royal-mail-barcode-manual-option-2.html
+++ b/app/views/antigen/v2/home-testing/royal-mail-barcode-manual-option-2.html
@@ -34,19 +34,20 @@
               </h1>
             </legend>
             <span id="enter-barcode-number-hint" class="govuk-body">
-              Enter the 13 character reference below the barcode.<br><br>
+              Enter the 13 character reference below the barcode.<br>
+              Enter numbers and letters only<br><br>
               It should look like this:
             </span>
 
             <div class="govuk-!-margin-top-5 govuk-!-margin-bottom-5">
-              <img src="/public/images/mail-barcode-number.png" alt="barcode number"/>
+              <img src="/public/images/royal-mail-barcode.png" style="width: 400px; height: auto;" alt="barcode number"/>
             </div>
 
             <div id="content-1">
               <div class="govuk-form-group">
                 <label class="govuk-label" for="mail-barcode-reference-1">
                   Royal Mail barcode reference<br>
-                  <span class="govuk-hint">For example, AA 1234 5678 9AA</span>
+                  <span class="govuk-hint">For example, ZD 6904 0038 5GB</span>
                 </label>
                 <input class="govuk-input govuk-!-width-two-thirds" id="mail-barcode-reference-1" name="mail-barcode-reference-1" type="text" value={{ data['mail-barcode-reference-1'] }}>
               </div>
@@ -68,7 +69,7 @@
         <button class="govuk-button" data-module="govuk-button">Continue</button>
 
         <p class="govuk-body">
-          <a href="/antigen/{{version}}/home-testing/scan-mail-barcode" role="button" draggable="false" class="govuk-link" data-module="govuk-button">
+          <a href="/antigen/{{version}}/home-testing/scan-mail-barcode-option-2" role="button" draggable="false" class="govuk-link" data-module="govuk-button">
             Use the barcode scanner instead
           </a>
         </p>
@@ -79,8 +80,8 @@
   </div>
 
   <div class="proto-action big">
-    <a href="/antigen/{{version}}/home-testing/royal-mail-barcode-manual-option-2">
-      <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 2</div>
+    <a href="/antigen/{{version}}/home-testing/royal-mail-barcode-manual">
+      <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 1</div>
     </a>
   </div>
 
