--- a/app/views/antigen/v2/home-testing/royal-mail-barcode-option-2.html
+++ b/app/views/antigen/v2/home-testing/royal-mail-barcode-option-2.html
@@ -35,13 +35,16 @@
             </legend>
             <span id="enter-barcode-number-hint" class="govuk-body">
               Use the phone on your camera or computer to scan the Royal Mail barcode.<br><br>
-              <strong>You'll find it on the right-hand side of the label on your return box.</strong> Do not scan the QR code, which is on the left-hand side of the label.<br><br>
-              The Royal Mail barcode should look like this:
+
+              The Royal Mail barcode is on the return box, it should look like this:
             </span>
 
             <div class="govuk-!-margin-top-5">
-              <img src="/public/images/mail-barcode-number.png" alt="barcode number"/>
+              <img src="/public/images/royal-mail-barcode.png" style="width: 400px; height: auto;" alt="barcode number"/>
             </div>
+
+            <p class="govuk-body govuk-!-margin-top-5">              <strong>You'll find it on the right-hand side of the label on your return box.</strong> Do not scan the QR code, which is on the left-hand side of the label.
+</p>
 
           </fieldset>
         </div>
@@ -49,7 +52,7 @@
         <button class="govuk-button" data-module="govuk-button">Scan barcode</button>
 
         <p class="govuk-body">
-          <a href="/antigen/{{version}}/home-testing/royal-mail-barcode-manual" role="button" draggable="false" class="govuk-link" data-module="govuk-button">
+          <a href="/antigen/{{version}}/home-testing/royal-mail-barcode-manual-option-2" role="button" draggable="false" class="govuk-link" data-module="govuk-button">
             Enter barcode manually instead
           </a>
         </p>
@@ -59,10 +62,10 @@
     </div>
   </div>
 
-
   <div class="proto-action big">
-    <a href="/antigen/{{version}}/home-testing/royal-mail-barcode-option-2">
-      <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 2</div>
+    <a href="/antigen/{{version}}/home-testing/royal-mail-barcode">
+      <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 1</div>
     </a>
   </div>
+
 {% endblock %}
