--- a/app/views/antigen/v2/home-testing/scan-mail-barcode-option-2.html
+++ b/app/views/antigen/v2/home-testing/scan-mail-barcode-option-2.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Scan your test kit barcode" %}
+{% set pageTitle = "Scan your Royal Mail barcode" %}
 
 {% extends "includes/layout.html" %}
 
@@ -15,7 +15,7 @@
   </p>
 </div>
 
-  <a class="govuk-back-link" href="/antigen/{{version}}/home-testing/enter-barcode-number">Back</a>
+  <a class="govuk-back-link" href="/antigen/{{version}}/home-testing/royal-mail-barcode">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -26,7 +26,20 @@
 
         <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">{{ pageTitle }}</h1>
         <p class="govuk-body">Position the barcode so it fits inside the square on your mobile or computer's camera.</p>
-
+        <details class="govuk-details" data-module="govuk-details">
+          <summary class="govuk-details__summary">
+            <span class="govuk-details__summary-text">
+              Tips to help you scan the barcode
+            </span>
+          </summary>
+          <div class="govuk-details__text">
+            <ul class="govuk-list govuk-list--bullet">
+              <li>if your camera is already ON in another app, you need to switch it OFF to scan the barcode</li>
+              <li>you need to "allow" permission to start the camera</li>
+              <li>if a camera icon appears, you need to click on it to start scanning</li>
+            </ul>
+          </div>
+        </details>
         <script src="https://cdn.jsdelivr.net/npm/scandit-sdk@5.x"></script>
 
         <scandit-barcode-picker
@@ -42,7 +55,7 @@
         >
         </scandit-barcode-picker>
 
-        <a href="/antigen/{{version}}/home-testing/enter-barcode-number" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
+        <a href="/antigen/{{version}}/home-testing/royal-mail-barcode" role="button" draggable="false" class="govuk-button govuk-!-margin-top-2 govuk-!-margin-bottom-8" data-module="govuk-button">
           Cancel
         </a>
 
@@ -50,20 +63,20 @@
   </div>
 
   <div class="proto-action big">
-    <a href="/antigen/{{version}}/home-testing/scan-barcode-option-2">
-      <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 2</div>
+    <a href="/antigen/{{version}}/home-testing/scan-mail-barcode">
+      <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Go to option 1</div>
     </a>
   </div>
 
   <script type="text/javascript">
 
-  const barcodePicker = document.getElementById('barcodePicker')
-  barcodePicker.addEventListener('scan', function (event) {
-    event.preventDefault()
-    setTimeout(function () {
-      window.location.href = '/antigen/{{version}}/home-testing/enter-barcode-manual';
-    }, 100)
-  })
+    const barcodePicker = document.getElementById('barcodePicker')
+    barcodePicker.addEventListener('scan', function (event) {
+      event.preventDefault()
+      setTimeout(function () {
+        window.location.href = '/antigen/{{version}}/home-testing/royal-mail-barcode-manual';
+      }, 100)
+    })
 
   </script>
 
