--- a/app/views/antigen/v2/order-home-test-kit/pre-reg/confirmation-email.html
+++ b/app/views/antigen/v2/order-home-test-kit/pre-reg/confirmation-email.html
@@ -14,9 +14,7 @@
         Your coronavirus home test should arrive within 2 days.<br>
      </p>
 
-     <div class="govuk-inset-text">
-        <h2 class="govuk-heading-m">Important: Your 10 digit order ID is 1123456789</h2>
-     </div>
+     <p class="govuk-body">Your order confirmation number is 1123456789</p>
 
      <!-- <p class="govuk-body">Important - keep this order ID to hand, you'll need it later.</p> -->
 
@@ -24,10 +22,11 @@
 
      <ol class="govuk-list govuk-list--number">
         <li>Read the instructions carefully. There is also guidance online and in other formats such as Easy Read: <a href="#" class="govuk-link">https://www.gov.uk/government/publications/testing-for-coronavirus-at-home</a></li>
-        <li>Register your kit online, using your order ID at <a href="/antigen/{{version}}/home-testing/">https://gov.uk/register-home-test</a></li>
         <li>Take the test. Here is a helpful video: <a href="https://www.youtube.com/watch?v=zCqo7MhQT6U">https://www.youtube.com/watch?v=zCqo7MhQT6U</a></li>
         <li>Follow the instructions on how to return the kit</li>
      </ol>
+
+     <p class="govuk-body">If you have symptoms, you and everyone you live with must self-isolate immediately and not leave home until you get your test results. You can leave home to get or post a test. If you do not have symptoms, follow the latest government guidance until you get your results. Go to <a href="https://www.gov.uk/coronavirus">https://www.gov.uk/coronavirus</a> and read the 'Guidance and support' section.</p>
 
      <p class="govuk-body">Your kit may be different to the one in the video. Make sure you follow the instructions in your kit.</p>
 
@@ -39,7 +38,10 @@
       </strong>
     </div> -->
 
-     <h2 class="govuk-heading-m">Read the test kit instructions for how to test people of different ages</h2>
+    <h2 class="govuk-heading-m">Get help to take the test</h2>
+    <p class="govuk-body">
+    To have a live video call with trained staff, download the free Be My Eyes app and go to the 'specialised help' section.
+   </p>
 
      <h2 class="govuk-heading-m">Instructions in alternative formats</h2>
      <p class="govuk-body">
@@ -88,16 +90,9 @@
 {% endblock %}
 
 {% block bodyEnd %}
-
-
-<div class="proto-action big" style="transform: translateY(-150%)">
-  <a href="/antigen/{{version}}/order-home-test-kit/confirmation-email-option-2">
-    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Option 2</div>
-  </a>
-</div>
 <div class="proto-action big">
-  <a href="/antigen/{{version}}/order-home-test-kit/confirmation-reminder">
-    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">48 hour reminder</div>
+  <a href="/antigen/{{version}}/home-testing/">
+    <div class="proto-action-text govuk-!-font-size-19 govuk-!-padding-2 govuk-!-margin-left-3">Register test kit</div>
   </a>
 </div>
 {% endblock %}
