--- a/app/views/antigen/v2/govuk/get-coronavirus-test.html
+++ b/app/views/antigen/v2/govuk/get-coronavirus-test.html
@@ -121,21 +121,32 @@
 
                   <p class="govuk-body">If you have any of these coronavirus (COVID-19) symptoms, even if mild, use this service to get a polymerase chain reaction (PCR) test as soon as possible:</p>
                   <ul class="govuk-list govuk-list--bullet">
-                    <li>a high temperature</li>
-                    <li>a new, continuous cough</li>
-                    <li>you’ve lost your sense of smell or taste or it’s changed</li>
+                    <li>high temperature</li>
+                    <li>new, continuous cough</li>
+                    <li>loss or change to your sense of smell or taste</li>
+                    <li>chills or shivers</li>
                     <li>new headache</li>
                     <li>feeling more tired or exhausted than usual</li>
-                    <li>new muscle aches</li>
-                    <li>loss of appetite</li>
-                    <li>shortness of breath</li>
                     <li>sore throat</li>
-                    <li>blocked nose (congestion)</li>
-                    <li>feeling sick (nausea)</li>
-                    <li>vomiting</li>
+                    <li>shortness of breath</li>
+                    <li>chest pains</li>
+                    <li>new muscle aches</li>
+                    <li>hoarse voice</li>
+                    <li>runny nose</li>
+                    <li>blocked nose</li>
+                    <li>sneezing</li>
+                    <li>feeling sick</li>
+                    <li>being sick (vomiting)</li>
+                    <li>diarrhoea</li>
+                    <li>loss of appetite</li>
+                    <li>abdominal pains</li>
+                    <li>sudden confusion</li>
+                    <li>new skin rash</li>
+                    <li>changes in the mouth or tongue</li>
+                    <li>red and sore fingers or toes</li>
                   </ul>
 
-<!-- 
+<!--
                   <p class="govuk-body">
                     You should also get a PCR test if you have one or more of these symptoms:
                   </p>
@@ -167,14 +178,6 @@
                       <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/">Check if people you live with need to self-isolate on NHS.UK</a>
                     </strong>
                   </div>
-
-                  <!-- <div class="govuk-warning-text govuk-!-margin-top-4">
-                    <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-                    <strong class="govuk-warning-text__text govuk-!-font-size-19">
-                      <span class="govuk-warning-text__assistive">Warning</span>
-                      If you have symptoms,<a href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/" target="blank" class="govuk-link">self-isolate</a> straight away until you get your results. Do not leave home, except to post a test kit or for a PCR test appointment. <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/" target="blank" class="govuk-link">Check if the people you live with need to self-isolate on NHS.UK.</a>
-                    </strong>
-                  </div> -->
 
                   <p class="govuk-body">
                     You should not use this service if you’ve received a positive PCR test result in the last 90 days, unless you develop any new symptoms.
