--- a/app/views/antigen/v2/refer-and-triage/when-did-symptoms-start.html
+++ b/app/views/antigen/v2/refer-and-triage/when-did-symptoms-start.html
@@ -46,49 +46,49 @@
 
             <div class="govuk-radios govuk-radios--conditional govuk-!-margin-top-5" data-module="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="date-of-onset-1" name="date-of-onset" type="radio" value="15 September 2021" {{ checked("date-of-onset", "15 September 2021") }}>
+                <input class="govuk-radios__input" id="date-of-onset-1" name="date-of-onset" type="radio" value="22 September 2021" {{ checked("date-of-onset", "22 September 2021") }}>
                 <label class="govuk-label govuk-radios__label" for="date-of-onset-1">
                   Wednesday, 22 September 2021
                 </label>
             </div>
             <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="date-of-onset-2" name="date-of-onset" type="radio" value="14 September 2021" {{ checked("date-of-onset", "14 September 2021") }}>
+                <input class="govuk-radios__input" id="date-of-onset-2" name="date-of-onset" type="radio" value="21 September 2021" {{ checked("date-of-onset", "21 September 2021") }}>
                 <label class="govuk-label govuk-radios__label" for="date-of-onset-2">
                   Tuesday, 21 September 2021
                 </label>
             </div>
             <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="date-of-onset-3" name="date-of-onset" type="radio" value="13 September 2021" {{ checked("date-of-onset", "13 September 2021") }}>
+                <input class="govuk-radios__input" id="date-of-onset-3" name="date-of-onset" type="radio" value="20 September 2021" {{ checked("date-of-onset", "20 September 2021") }}>
                 <label class="govuk-label govuk-radios__label" for="date-of-onset-3">
                   Monday, 20 September 2021
                 </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-4" name="date-of-onset" type="radio" value="12 September 2021" {{ checked("date-of-onset", "12 September 2021") }}>
+              <input class="govuk-radios__input" id="date-of-onset-4" name="date-of-onset" type="radio" value="19 September 2021" {{ checked("date-of-onset", "19 September 2021") }}>
               <label class="govuk-label govuk-radios__label" for="date-of-onset-4">
                 Sunday, 19 September 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-5" name="date-of-onset" type="radio" value="11 September 2021" {{ checked("date-of-onset", "11 September 2021") }}>
+              <input class="govuk-radios__input" id="date-of-onset-5" name="date-of-onset" type="radio" value="18 September 2021" {{ checked("date-of-onset", "18 September 2021") }}>
               <label class="govuk-label govuk-radios__label" for="date-of-onset-5">
                 Saturday, 18 September 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-6" name="date-of-onset" type="radio" value="10 September 2021" {{ checked("date-of-onset", "10 September 2021") }}>
+              <input class="govuk-radios__input" id="date-of-onset-6" name="date-of-onset" type="radio" value="17 September 2021" {{ checked("date-of-onset", "17 September 2021") }}>
               <label class="govuk-label govuk-radios__label" for="date-of-onset-6">
                 Friday, 17 September 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-7" name="date-of-onset" type="radio" value="09 September 2021" {{ checked("date-of-onset", "09 September 2021") }}>
+              <input class="govuk-radios__input" id="date-of-onset-7" name="date-of-onset" type="radio" value="16 September 2021" {{ checked("date-of-onset", "16 September 2021") }}>
               <label class="govuk-label govuk-radios__label" for="date-of-onset-7">
                 Thursday, 16 September 2021
               </label>
             </div>
             <div class="govuk-radios__item">
-              <input class="govuk-radios__input" id="date-of-onset-8" name="date-of-onset" type="radio" value="08 September 2021" {{ checked("date-of-onset", "08 September 2021") }}>
+              <input class="govuk-radios__input" id="date-of-onset-8" name="date-of-onset" type="radio" value="15 September 2021" {{ checked("date-of-onset", "15 September 2021") }}>
               <label class="govuk-label govuk-radios__label" for="date-of-onset-8">
                 Wednesday, 15 September 2021
               </label>
@@ -134,12 +134,12 @@
 
           <button class="govuk-button" data-module="govuk-button">Continue</button>
 
-          <div class="govuk-warning-text govuk-!-margin-top-4">
+          <div class="govuk-warning-text">
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
             <strong class="govuk-warning-text__text govuk-!-font-size-19">
               <span class="govuk-warning-text__assistive">Warning</span>
-              If you have a high temperature, a new continuous cough, or loss or change to your sense of smell or taste, you need to self-isolate immediately. If you have any other symptoms, you do not have to self-isolate until you get a positive result.<br>
-              <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/">Check if people you live with need to self-isolate on NHS.UK</a>
+              If they have a high temperature, a new continuous cough, or loss or change to their sense of smell or taste, they should stay at home until they get their result. They can leave home to get or post a test.<br>
+              <a href="https://www.nhs.uk/conditions/coronavirus-covid-19/self-isolation-and-treatment/when-to-self-isolate-and-what-to-do/">Check if people they live with need to self-isolate on NHS.UK</a>
             </strong>
           </div>
 
