--- a/app/views/index.html
+++ b/app/views/index.html
@@ -448,7 +448,7 @@
               <div class="govuk-grid-column-one-third">
                 <strong class="govuk-tag govuk-tag--green govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">Live</strong>
                 <h3 class="govuk-heading-s">V1</h3>
-                <p class="govuk-body">Latest update: 19 Aug 2021</p>
+                <p class="govuk-body">Latest update: 27 September 2021</p>
                 <ul class="govuk-list govuk-list--bullet">
                   <li>
                     <a href="/litereg-accounts/v1/">Start page</a>
@@ -514,7 +514,7 @@
                   <!-- <p class="govuk-body">Updated on 4 June 2021</p> -->
                   <ul class="govuk-list govuk-list--bullet">
                     <li>
-                      <a href="/accessiibility/v1/govuk/get-coronavirus-test">Start page</a>
+                      <a href="/accessibility/v1/govuk/get-coronavirus-test">Start page</a>
                     </li>
                   </ul>
                 </div>
@@ -1232,16 +1232,17 @@
                         </details>-->
                   </ul>
 
-                  <h3 class="govuk-heading-s govuk-!-margin-bottom-1">A release (12/05/21) - Dynamic content - AI and Self Report</h3>
-                  <ul class="govuk-list govuk-list--bullet">
-                    <li><a href="/share-result-lateral-flow/v18-1/index">Version 18.1: Reporting for someone else (1st/3rd person switcher)</a><nbsp> <strong class="govuk-tag govuk-tag--green govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In live</strong></li>
-                </ul>
 
                     </ul>
                   </div>
                 </details>
                 <br>
 
+                <h3 class="govuk-heading-s govuk-!-margin-bottom-1">A release (12/05/21) - Dynamic content - Digital Read and Self Report</h3>
+                <ul class="govuk-list govuk-list--bullet">
+                  <li><a href="/share-result-lateral-flow/v18-1/index">Version 18.1: Reporting for someone else (1st/3rd person switcher)</a><nbsp> <strong class="govuk-tag govuk-tag--green govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In live</strong></li>
+                  <li><a href="/share-result-lateral-flow/v18-2/index">Version 18.2: Reporting for someone else (1st/3rd person switcher)</a><nbsp> <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In Design</strong></li>
+                </ul>
 
                 <h3 class="govuk-heading-s govuk-!-margin-bottom-1">D release (02/06/21) - Triage redesign</h3>
                 <ul class="govuk-list govuk-list--bullet">
@@ -1382,12 +1383,23 @@
                           <ul class="govuk-list govuk-list--bullet">
                             <li><a href="/share-result-lateral-flow/v26/index">End to end prototype for UR</a><nbsp> <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In design</strong></li>
                             <li><a href="/share-result-lateral-flow/sandbox/comms/strategic2/contact-choice">Strategic - choose method</a><nbsp> <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In design</strong></li>
-                          <ul>
+                          </ul>
                             <h4 class="gov-heading-s govuk-!-margin-bottom-1">Iteration 3 - language preferences</h4>
                               <ul class="govuk-list govuk-list--bullet">
+                                <li><a href="/share-result-lateral-flow/sandbox/comms/strategic3/contact-choice2">Strategic - choose method (conditionally revealed A11y testing)</a><nbsp> <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In design</strong></li>
                                 <li><a href="/share-result-lateral-flow/sandbox/comms/strategic3/contact-choice">Strategic - choose method</a><nbsp> <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In design</strong></li>
-                                <li><a href="/share-result-lateral-flow/sandbox/comms/strategic3/language-choice">Strategic - choose language</a><nbsp> <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In design</strong></li>
-                              <ul>
+                                <li><a href="/share-result-lateral-flow/sandbox/comms/strategic3/language-choice">Strategic - choose language (1 thing per page)</a><nbsp> <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In design</strong></li>
+                                <li><a href="/share-result-lateral-flow/sandbox/comms/strategic3/contact-prefs2">Strategic - choose language (conditional revealed)</a><nbsp> <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In design</strong></li>
+                                <li><a href="/share-result-lateral-flow/sandbox/comms/strategic3/lontact-prefs3">Strategic - choose language (not conditional revealed)</a><nbsp> <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In design</strong></li>
+                              </ul>
+                                <h4 class="gov-heading-s govuk-!-margin-bottom-1">Iteration 4 - comms, language and new check answers</h4>
+                                  <ul class="govuk-list govuk-list--bullet">
+                                    <li><a href="/share-result-lateral-flow/sandbox/comms/strategic4/contact-choice2">Strategic - choose method (conditionally revealed A11y testing)</a><nbsp> <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In design</strong></li>
+                                  </ul>
+                                <h4 class="gov-heading-s govuk-!-margin-bottom-1">Iteration 5 - Content Design for iteration 4</h4>
+                                    <ul class="govuk-list govuk-list--bullet">
+                                      <li><a href="/share-result-lateral-flow/sandbox/comms/strategic5/contact-choice2">Strategic - choose method (conditionally revealed A11y testing)</a><nbsp> <strong class="govuk-tag govuk-tag--orange govuk-!-margin-top-0 govuk-!-margin-bottom-2" style="font-size: 11px;">In design</strong></li>
+                                    </ul>
                       </div>
                     </details>
                     <br><br>
@@ -1395,7 +1407,7 @@
             </div>
           </div>
         </div>
-        <div class="govuk-accordion__section ">
+        <div class="govuk-accordion__section">
           <div class="govuk-accordion__section-header">
             <h2 class="govuk-accordion__section-heading">
               <span class="govuk-accordion__section-button" id="accordion-default-heading-4">
@@ -1422,6 +1434,33 @@
                   <li>
                     <a href="/organisational/test-pass/mvp-reg">MVP: Organisation bulk registration with test pass</a>
                   </li>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="govuk-accordion__section">
+          <div class="govuk-accordion__section-header">
+            <h2 class="govuk-accordion__section-heading">
+              <span class="govuk-accordion__section-button" id="accordion-default-heading-4">
+                International Arrivals
+              </span>
+            </h2>
+          </div>
+          <div id="accordion-default-content-4" class="govuk-accordion__section-content" aria-labelledby="accordion-default-heading-4">
+            <div style="display: flex;">
+              <div class="govuk-grid-column-one-half">
+                <h3 class="govuk-heading-s govuk-!-margin-bottom-1">Admin Journey</h3>
+                <ul class="govuk-list govuk-list--bullet">
+                  <li>
+                    <a href="/international-arrivals/v3/superuser-home">Start page</a>
+                  </li>
+                </ul>
+                  <h3 class="govuk-heading-s govuk-!-margin-bottom-1">User Journey</h3>
+                  <ul class="govuk-list govuk-list--bullet">
+                    <li>
+                      <a href="/international-arrivals/v4/index">Start page</a>
+                    </li>
+                  </ul>
               </div>
             </div>
           </div>
