--- a/app/views/litereg-accounts/v2/scan-mail-barcode.html
+++ b/app/views/litereg-accounts/v2/scan-mail-barcode.html
@@ -1,5 +1,5 @@
 {% set version = "v2" %}
-{% set pageTitle = "Scan your test kit barcode" %}
+{% set pageTitle = "Scan the Royal Mail barcode" %}
 
 {% extends "includes/layout.html" %}
 
@@ -15,7 +15,7 @@
   </p>
 </div>
 
-  <a class="govuk-back-link" href="/litereg-accounts/{{version}}/enter-barcode">Back</a>
+  <a class="govuk-back-link" href="/litereg-accounts/{{version}}/royal-mail-barcode">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -25,7 +25,7 @@
     <div class="govuk-grid-column-two-thirds">
 
         <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">{{ pageTitle }}</h1>
-        <p class="govuk-body">Position the barcode so it fits inside the square on your mobile, tablet or computer's camera.</p>
+        <p class="govuk-body">Position the barcode so it fits inside the square on your mobile or computer's camera.</p>
         <details class="govuk-details" data-module="govuk-details">
           <summary class="govuk-details__summary">
             <span class="govuk-details__summary-text">
@@ -39,7 +39,6 @@
             </ul>
           </div>
         </details>
-
         <script src="https://cdn.jsdelivr.net/npm/scandit-sdk@5.x"></script>
 
         <scandit-barcode-picker
@@ -55,12 +54,12 @@
         >
         </scandit-barcode-picker>
 
-        <a href="/litereg-accounts/{{version}}/enter-barcode" role="button" draggable="false" class="govuk-button govuk-!-margin-top-3 govuk-!-margin-bottom-3" data-module="govuk-button">
+        <a href="/litereg-accounts/{{version}}/royal-mail-barcode" role="button" draggable="false" class="govuk-button govuk-!-margin-top-3 govuk-!-margin-bottom-3" data-module="govuk-button">
           Cancel
         </a>
 
         <p class="govuk-body">
-          <a href="/litereg-accounts/{{version}}/enter-barcode-manual" role="button" draggable="false" class="govuk-link" data-module="govuk-button">
+          <a href="/litereg-accounts/{{version}}/royal-mail-barcode-manual" role="button" draggable="false" class="govuk-link" data-module="govuk-button">
             Enter barcode manually instead
           </a>
         </p>
@@ -70,13 +69,13 @@
 
   <script type="text/javascript">
 
-  const barcodePicker = document.getElementById('barcodePicker')
-  barcodePicker.addEventListener('scan', function (event) {
-    event.preventDefault()
-    setTimeout(function () {
-      window.location.href = '/litereg-accounts/{{version}}/enter-barcode-manual';
-    }, 100)
-  })
+    const barcodePicker = document.getElementById('barcodePicker')
+    barcodePicker.addEventListener('scan', function (event) {
+      event.preventDefault()
+      setTimeout(function () {
+        window.location.href = '/litereg-accounts/{{version}}/royal-mail-barcode-manual';
+      }, 100)
+    })
 
   </script>
 
