--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -239,7 +239,6 @@ $govuk-assets-path: '/govuk/assets/';
 .info-summary > p {
   padding: 15px 30px 15px 10px;
   border-bottom: 1px solid #b1b4b6;
-  display: inline-block;
 }
 
 .info-summary div {
@@ -253,11 +252,12 @@ $govuk-assets-path: '/govuk/assets/';
 }
 
 @media (min-width: 40.0625em) {
-  .info-summary div {
-    display: flex;
+  .info-summary > p {
+    display: inline-block;
   }
   .info-summary div p {
-    padding: 10px 40px 0 0;
+    padding: 10px 30px 0 0;
+    display: inline-block;
   }
 }
 
